an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
01/06/2026:
[!] Happy New Year! Sorry for being so late on the update, I took a break
like everyone else. But I'm back!
[+] Added Candy Crush (Thanks for the suggestion kimmy j)
[+] Added Class of '09 (Thanks for the suggestion emilee :>)
[+] Added Haunt the House (Thanks for the suggestion Luke)
[+] Added Ice Climber (Thanks for the suggestion DW I'M ALRD IN YOUR SKIN 
;))
[+] Added Pokémon Gold and Pokémon Silver (Thanks for the suggestion KLG)

12/18/2025:
[+] Added Google Doodle Baseball & Google Snake (Thanks for the suggestion 
"ok" but in a essdee way)
[+] Made Five Nights at Freddy's 2, 3 and 4 the HD versions.
[+] Should've fixed the Discord server opening the Discord homepage (Thanks
for the bug report PLAY PLUH RNG)

12/17/2025:
[+] Fixed Happy Wheels levels not loading. (Had to make a whole semi-proxy
for this) (Thanks for the bug reports mango 67, colin, daddy, Oedipus33, 
Joshua Daniel Ronald Wheeler and TimTheFlyWhiteGuy)
[+] Should have finally fully fixed the failed to fetch in the A.I. (Thanks
for the bug reports KLG, Vin and Khabylame_MECH)
[+] Added Deltarune Chapters 1-4 (Thanks for the suggestions o-333,
Floor_Popcorn and Ilovegames(notjustthissite))

12/16/2025:
[+] Added a "Random Game" feature.
[+] Added Fruit Ninja
[+] Added GunSpin (Thanks for the suggestion BIG_B & Lucas M.)

12/15/2025:
[+] Fixed The Binding of Isaac: Wrath of the Lamb (and fixed the typo in the
name) (Thanks for the bug reports colin lowkey chill, aaahhhhhh123, your 
mom, Zsredd & tomas quintero)
[+] Added Happy Wheels (Thanks for the suggestion adrian the explainer)