@@ -1,6 +1,2 @@
-01/07/2025:
-[!] It appears No Name Games was blocked for some people! But don't worry that's why I'm here.
-[!] Read these instructions first before closing this tab or closing this popup.
-[!] Go to a new tab, type in tiny.cc/nngexternal3
-[!] Once you go there press Ctrl + S to save the file to your downloads
-[!] Once you've done that open the file that you saved and we're back! :D
+01/16/2026:
+[+] Re-added Crossy Road (Thanks for the suggestion!)
